--- a/src/pages/SignUp/signup.scss
+++ b/src/pages/SignUp/signup.scss
@@ -28,14 +28,6 @@
     font-weight: normal;
   }
 
-
-  .input-group-2cols {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    justify-content: space-between;
-    text-align: left;
-  }
-
   
   //  style input autocomplete
     input:-webkit-autofill,
