--- a/src/pages/Signin/signin.scss
+++ b/src/pages/Signin/signin.scss
@@ -54,13 +54,6 @@
     }
 
 
-  .input-group-2cols {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    justify-content: space-between;
-    text-align: left;
-  }
-  
 
   @media screen and (min-width: $mediumLarge) {
     .inner-wrapper{
